<resources>

    <!--    địa chỉ nhà hàng-->
    <string name="restaurant_address">Restaurant Address</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="phone_number">Phone number</string>
    <string name="number_of_dishes">Number of dishes</string>
    <string name="table_empty">Number Of Empty Tables</string>
    <string name="Restaurant_closure">Restaurant closure</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="msg_token_fmt">FCM Token: %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="app_name">Restaurant Manager</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_profile">Profile</string>
    <string name="title_table">Table</string>
    <string name="title_statistical">Statistical</string>
    <string name="title_menu">Menu</string>
    <string name="title_order">Order</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_show_menu">Show Menu</string>
    <string name="title_show_table">Show Table</string>
    <string name="title_statistical_activity">Statistical Activity</string>
    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>
    <string name="Save_">Save</string>
    <string name="get_location">Get Location</string>
    <string name="message_notification">Message</string>
    <string name="message_notification_content">Content</string>
    <string name="message_from">From</string>
    <string name="exit_">Exit</string>
    <string name="cancel_">Cancel</string>
    <string name="ok_">OK</string>
    <string name="Directions_on_map">Directions On Map</string>
    <string name="call_">Call</string>
    <string name="message_">Message</string>
    <string name="save_description">Save Description</string>
</resources>