<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dinalogbkg">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_remove_24"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:backgroundTint="#00000000"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:backgroundTint="#00000000"
            android:padding="5dp"
            android:text="Settings"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="25dp" />
        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:src="@drawable/ic_baseline_clear_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDarkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00000000"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="#00000000"
            android:src="@drawable/nightmode" />

        <Switch
            android:id="@+id/darkModeSwitch"
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="#00000000"
            android:text="@string/dark_mode"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutClosure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:backgroundTint="#00000000"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="#00000000"
            android:src="@drawable/ic_baseline_whatshot_24" />

        <Switch
            android:id="@+id/closedSwitch"
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="#00000000"
            android:text="@string/Restaurant_closure"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:backgroundTint="#00000000"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="#00000000"
            android:src="@drawable/location" />

        <LinearLayout
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:inputType="text"
                android:text="Viet Nam"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnSaveAddress"
                android:layout_width="52dp"
                android:layout_height="37dp"
                android:layout_marginTop="3dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/Save_"
                android:textSize="10dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:backgroundTint="#00000000"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="#00000000"
            android:src="@drawable/map" />

        <LinearLayout
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center|left"
                android:inputType="text"
                android:text="Viet Nam"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnGetLocation"
                android:layout_width="118dp"
                android:layout_height="37dp"
                android:layout_marginTop="3dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"

                android:text="@string/get_location"
                android:textSize="10dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:backgroundTint="#00000000"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="#00000000"
            android:src="@drawable/baseline_edit_calendar_24" />

        <LinearLayout
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:ellipsize="end"
                android:singleLine="false"
                android:gravity="center|left"
                android:inputType="text"
                android:text="Mô tả"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnSaveDescription"
                android:layout_width="118dp"
                android:layout_height="37dp"
                android:layout_marginTop="3dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/save_description"
                android:textSize="10dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>